ThawThread - implement Runnable interface instead of extending Thread